# ratl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  bench_batch_int24.cpp  bench_float_to_int.cpp  bench_int24.cpp  bench_rand.cpp  bench_reverse_endianness.cpp  bench_transform.cpp  bench_transform_portaudio.cpp  bench_utils.hpp
examples/: CMakeLists.txt
examples/alsa_playback/: CMakeLists.txt  alsa_playback.cpp  alsa_playback.hpp  alsa_playback_example.cpp
examples/ratl_pybind/: CMakeLists.txt  ratl.py  ratl_pybind.cpp
include/ratl/: allocator.hpp  channel.hpp  channel_span.hpp  chrono.hpp  convert.hpp  dither_generator.hpp  frame.hpp  frame_span.hpp  int24.hpp  interleaved.hpp  interleaved_span.hpp  network_sample.hpp  noninterleaved.hpp  noninterleaved_span.hpp  ratl.hpp  sample.hpp  sample_converter.hpp  sample_limits.hpp  sample_transformer.hpp  sample_type_limits.hpp  transform.hpp  types.hpp  uint24.hpp
include/ratl/chrono/: duration_cast.hpp  forward_delay_locked_loop.hpp  reverse_delay_locked_loop.hpp  sample_duration.hpp  sample_time_point.hpp  subsample_duration.hpp  subsample_time_point.hpp  time_point_cast.hpp
include/ratl/detail/: basic_sample_converter.hpp  basic_sample_transformer.hpp  batch_alignment.hpp  batch_base_traits.hpp  batch_basic_sample_converter.hpp  batch_basic_sample_transformer.hpp  batch_cast.hpp  batch_convert.hpp  batch_creator.hpp  batch_dither_generator.hpp  batch_endianness.hpp  batch_fast_sample_converter.hpp  batch_fast_sample_converter_impl.hpp  batch_rand.hpp  batch_reference_sample_converter.hpp  batch_reference_sample_converter_impl.hpp  batch_round.hpp  batch_sample_converter.hpp  batch_sample_fix.hpp  batch_sample_transformer.hpp  batch_traits.hpp  batch_value_traits.hpp  blit_iterator.hpp  cast.hpp  channel_iterator.hpp  config.hpp  constants.hpp  convert_traits.hpp  dither_generator.hpp  endianness.hpp  fast_sample_converter.hpp  fast_sample_converter_impl.hpp  frame_iterator.hpp  interleaved_iterator.hpp  intrin.hpp  noninterleaved_iterator.hpp  operator_arrow_proxy.hpp  rand.hpp  reference_sample_converter.hpp  reference_sample_converter_impl.hpp  (+12 more)
test/: CMakeLists.txt  test_batch_convert.cpp  test_batch_creator.cpp  test_convert.cpp  test_dither.cpp  test_int24.cpp  test_interleaved.cpp  test_iterators.cpp  test_noninterleaved.cpp  test_predicates.hpp  test_ratl.cpp  test_round.cpp  test_sample.cpp  test_transform_interleaved.cpp  test_transform_interleaved_to_noninterleaved.cpp  test_transform_noninterleaved.cpp  test_transform_noninterleaved_to_interleaved.cpp  test_type_utils.hpp  test_uint24.cpp  test_utils.hpp
